SecurityConfig update